<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>proyecto-2019</groupId>
	<artifactId>proyecto-2019</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Proyecto 2019</name>
	<description>Proyecto 2019</description>
	<build>
		<sourceDirectory>src/main</sourceDirectory>
		<testSourceDirectory>src/test</testSourceDirectory>
		<resources>
			<resource>
				<directory>src/main</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/generated/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<release>10</release>
				</configuration>
			</plugin>
			<!-- Parser generation with CUP -->
			<plugin>
				<groupId>com.github.vbmacher</groupId>
				<artifactId>cup-maven-plugin</artifactId>
				<version>11b-20160615</version>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<className>JSONQLParser</className>
					<symbolsName>JSONQLTokens</symbolsName>
					<symbolsInterface>true</symbolsInterface>
					<outputDirectory>src/main</outputDirectory>
					<cupDefinition>src/main/resources/cup/parser.cup</cupDefinition>
				</configuration>
			</plugin>
			<!-- Lexer generation with JFlex -->
			<plugin>
				<groupId>de.jflex</groupId>
				<artifactId>jflex-maven-plugin</artifactId>
				<version>1.7.0</version>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<className>JSONQLLexer</className>
							<outputDirectory>src/main</outputDirectory>
							<lexDefinitions>
								<lexDefinition>src/main/resources/jflex/lexer.lex</lexDefinition>
							</lexDefinitions>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.vbmacher</groupId>
			<artifactId>java-cup-runtime</artifactId>
			<version>11b-20160615</version>
		</dependency>
	</dependencies>
</project>
